kubernetes/apps/gateway/envoy-gateway/ressources/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name external
  annotations:
    external-dns.kubernetes.io/target: &ips 82.65.135.80,2a0c:b641:2c0:110::100
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 192.168.10.100,2a0c:b641:2c0:110::100
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: *name
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-0
      hostname: "*.as212510.net"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: as212510-net-tls
    - name: https-1
      hostname: "*.adminafk.fr"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: adminafk-fr-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name internal
  annotations:
    external-dns.kubernetes.io/target: &ips 192.168.10.101,2a0c:b641:2c0:110::101
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: *ips
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: *name
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: "*.unicornafk.fr"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: unicornafk-fr-tls
