kubernetes/apps/gateway/envoy-gateway/ressources/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
