kubernetes/apps/gateway/envoy-gateway/ressources/robots-txt.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robots-txt
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames: ["adminafk.fr", "as212510.net", "unicornafk.fr"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /robots.txt
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: public, max-age=600
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: robots-txt-filter
