kubernetes/apps/gateway/envoy-gateway/ressources/security.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: security
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames: ["adminafk.fr", "unicornafk.fr"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/security.txt
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: public, max-age=600
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: security-filter
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: security-as212510
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames: ["as212510.net"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/security.txt
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cache-Control
                value: public, max-age=600
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: security-as212510-filter
